created signup bacckend

--- a/views/portal.html
+++ b/views/portal.html
@@ -66,7 +66,7 @@
 
                 <div class="input-container">
                     <i class="fas fa-phone"></i>
-                    <input type="tel" id="si_telephone" name="sn_telephone" placeholder="Telephone">
+                    <input type="tel" id="si_phone" name="sn_phone" placeholder="phone">
                 </div>                
                 
                 <div class="input-container">
@@ -144,7 +144,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
-    <!-- <script src="/js/auth.js"></script> -->
+    <script src="/js/auth.js"></script>
     <script src="/js/axios.js"></script>
     <script src="/js/portal.js"></script>
 
