get the message from database

--- a/public/views/chat.html
+++ b/public/views/chat.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/chat.css">
+    
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="/css/sidebar.css">
+    <link rel="stylesheet" href="/css/chat.css">
     <!-- loads loads common sidebar (sidebar.html) into current page -->
     <script src="/js/sidebarLoader.js"></script>
 
@@ -84,15 +85,16 @@
 
 
         <div class="right-container">
-            
            
-
         </div>
 
     </div>
 
     
+   
+    <script src="/js/basicconfig.js"></script>
     <script src="/js/userprofile.js"></script>
+    <script src="/js/chat.js"></script>
     <script src="/js/axios.js"></script>
 
 </body>
