--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- loads loads common sidebar (sidebar.html) into current page -->
+    <link rel="stylesheet" href="/css/sidebar.css">
     <script src="/js/sidebarLoader.js"></script>
     
     <title>Dashboard Sidebar Menu</title> 
