--- a/public/views/forgotpassword.html
+++ b/public/views/forgotpassword.html
@@ -113,6 +113,7 @@
     
     
     <!-- <script src="/js/portal.js"></script> -->
+    <script src="/js/basicconfig.js"></script>
     <script src="/js/forgotpassword.js"></script>
     <script src="/js/axios.js"></script>
 
