--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -37,7 +37,7 @@ body {
   top: 0;
   width: 100%;
   height: 20%;
-  background-color: #009688;
+  background-color: var(--telegram-color);
 }
 
 .main-container {
@@ -132,7 +132,7 @@ body {
     display: flex;
     width: 100%;
     height: 70px;
-    background: #76daff;
+    background:var(--telegram-color);
     align-items: center;
     font-size: 0.8em;
     text-decoration: none;
@@ -155,7 +155,7 @@ body {
     position: absolute;
     left: 260px;
     text-align:center;
-    background:#76daff;
+    background:var(--telegram-color);
     color: #fff;
   }
   
