--- a/public/views/chat.html
+++ b/public/views/chat.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chat Section</title>
 
     
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/sidebar.css">
     <link rel="stylesheet" href="/css/chat.css">
+    
     <!-- loads loads common sidebar (sidebar.html) into current page -->
     <script src="/js/sidebarLoader.js"></script>
 
@@ -48,12 +50,14 @@
                 </div>
 
                 <div class="nav-icons">
-                    <li><i class="fa-solid fa-users"></i></li>
+                    <li><i class="fa-solid fa-users" id="groupUsersIcon" data-toggle="modal" data-target="#exampleModalCenter" ></i></li>
                     <li><i class="fa-solid fa-message"></i></li>
                     <li><i class="fa-solid fa-ellipsis-vertical"></i></li>
                 </div>
-            </div>
 
+                
+            </div>
+            
 
             <!--notification -->
             <div class="notif-box">
@@ -74,7 +78,6 @@
                 <i class="fa-sharp fa-solid fa-bars-filter"></i>
             </div>
 
-
             <!--chats -->
             <div class="chat-list">
 
@@ -82,19 +85,67 @@
 
         </div>
 
-
-
         <div class="right-container">
            
         </div>
 
+        
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalCenterTitle">Create Group</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body" style="max-height: 300px; overflow-y: auto;">
+                      <form method="POST">
+                          <div class="form-group">
+                              <label for="groupName">Group Name</label>
+                              <input type="text" class="form-control" id="groupName" name="groupName" required>
+                          </div>
+                          <div class="form-group">
+                              <label for="groupImage">Group Image</label>
+                              <input type="file" class="form-control-file" id="groupImage" name="groupImage">
+                          </div>
+                          <div class="form-group">
+                              <label>Select Users for the Group</label>
+                              <div class="user-selection">
+                                  <!-- Display list of users with checkboxes for selection -->
+                                  <!-- Example: -->
+                                  <!-- <input type="checkbox" id="user1" name="user1"> -->
+                                  <!-- <label for="user1">User 1</label> -->
+                                  <!-- Repeat for each user -->
+                              </div>
+                          </div>
+                      </form>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" form="createGroupForm" class="btn btn-primary" id="createGroup">Create Group</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+        
+
+
+
+
+
+
     </div>
 
     
-   
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
     <script src="/js/basicconfig.js"></script>
     <script src="/js/userprofile.js"></script>
-    <script src="/js/chat.js"></script>
+    <script src="/js/userchat.js"></script>
+    <script src="/js/groupchat.js"></script>
     <script src="/js/axios.js"></script>
 
 </body>
