--- a/public/views/sidebar.html
+++ b/public/views/sidebar.html
@@ -1,4 +1,4 @@
-<!-- Coding by CodingLab | www.codinglabweb.com -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,10 +8,12 @@
     
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+   
     
     <title>Dashboard Sidebar Menu</title> 
 </head>
 <body>
+    
     <nav class="sidebar close">
         <header>
             <div class="image-text">
@@ -27,7 +29,7 @@
 
             <i class='bx bx-chevron-right toggle'></i>
         </header>
-
+      
         <div class="menu-bar">
             <div class="menu">
 
@@ -84,7 +86,7 @@
 
             <div class="bottom-content">
                 <li class="">
-                    <a href="#">
+                    <a href="#" id="logoutBtn">
                         <i class='bx bx-log-out icon' ></i>
                         <span class="text nav-text">Logout</span>
                     </a>
@@ -103,13 +105,13 @@
                 </li>
                 
             </div>
-        </div>
+       
 
     </nav>
 
     <!-- <section class="home">
         <div class="text">Homepage</div>
     </section> -->
-
+    
 </body>
 </html>
