--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -37,7 +37,7 @@ body {
   top: 0;
   width: 100%;
   height: 20%;
-  background-color: var(--telegram-color);
+  /* background-color: var(--telegram-color); */
 }
 
 .main-container {
@@ -73,7 +73,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: url(https://camo.githubusercontent.com/854a93c27d64274c4f8f5a0b6ec36ee1d053cfcd934eac6c63bed9eaef9764bd/68747470733a2f2f7765622e77686174736170702e636f6d2f696d672f62672d636861742d74696c652d6461726b5f61346265353132653731393562366237333364393131306234303866303735642e706e67); */
     opacity: 0.5;
   }
   
@@ -92,7 +91,12 @@ body {
     white-space: nowrap;
     overflow: hidden; 
     text-overflow: ellipsis;
-  }
+    color: var(--telegram-color);
+    font-weight: bold; 
+    font-size: 1.6em;
+    margin-top: 12px;
+}
+
 
   .user-img {
     position:relative;
@@ -175,7 +179,6 @@ body {
     height: 40px;
     background: #f6f6f6;
     display: flex;
-  /*   justify-content: center; */
     align-items: center;
   }
   
@@ -210,7 +213,6 @@ body {
     position: relative;
     width: 100%;
     display:flex;
-  /*   justify-content: center; */
     align-items:center;
     cursor: pointer;
     padding: 15px;
@@ -271,7 +273,7 @@ body {
     min-width: 20px;
     height: 20px;
     border-radius: 50%;
-  /*   text-align: center; */
+ 
     font-size: 0.8em;
     font-weight: 400;
     display:flex;
@@ -319,15 +321,16 @@ body {
     cursor: pointer;
   }
   
-  .right-container .header .img-text h4 {
-    font-weight: 500;
+  .right-container .header .img-text h5 {
+    font-weight: 700;
     line-height: 1.2em;
     margin-left: 15px;
+    margin-top: 8px;
   }
   
-  .right-container .header .img-text h4 span {
-    font-size: 0.8em;
-    color: #555;
+  .right-container .header .img-text h5 span {
+    font-size: 0.7em;
+    color: var(--telegram-color);
   }
   
   .right-container .header .nav-icons {
@@ -358,7 +361,6 @@ body {
   .message-box p {
     position:relative;
     right: 0;
-    text-align: right;
     max-width: 65%;
     padding: 12px;
     background: #dcf8c6;
@@ -366,6 +368,10 @@ body {
     font-size: 0.9em;
   }
   
+  .message-box.my-message p {
+    text-align: right;
+  }
+
   .message-box.my-message p::before {
     content : '';
     position: absolute;
@@ -379,8 +385,8 @@ body {
   .message-box p span {
     display: block;
     margin-top: 5px;
-    font-size: 0.8em;
-    opacity: 0.5;
+    font-size: 0.9em;
+    opacity: 0.9; 
   }
   
   .my-message {
@@ -393,14 +399,14 @@ body {
   
   .friend-message {
     justify-content: flex-start;
-  
   }
   
   .chat-container .my-message i {
     color: yellow;
   }
   
-  .message-box.friend-message::before {
+  
+  .message-box.friend-message p::before {
     content : '';
     position: absolute;
     top: 0;
@@ -410,6 +416,10 @@ body {
     background: linear-gradient(225deg, #fff 0%, #fff 50%, transparent 50%, transparent);
   }
   
+  .message-box.riend-messag p {
+    text-align: left;
+  }
+
   .chatbox-input {
     position:relative;
     width: 100%;
@@ -480,4 +490,130 @@ body {
 
   
   
+#pContainer{
+  border: 3px solid black;
+  width: 395px;
+  height: 380px;
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  display: none;
+  background: #f0f0f0;;
+}
+
+.elevated {
+  position: relative;
+  top: -160px;
+}
+
+.childSubContainer{
+  height: 36px;
+  width: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  outline: none;
+  font-size: 24px;
+  background: none;
+}
+
+.user-name {
+  margin-left: 10px; 
+}
+
+
+
+/* ===== Reusable code - Here ===== */
+.sidebar li{
+  height: 50px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.sidebar header .image, .sidebar .icon{
+  min-width: 60px;
+  border-radius: 6px;
+}
+
+.sidebar .icon{
+  margin-right: 10px !important;
+  min-width: 60px;
+  border-radius: 6px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.sidebar .text, .sidebar .icon{
+  color: var(--text-color);
+  transition: var(--tran-03);
+}
+
+.sidebar .text{
+  font-size: 17px;
+  font-weight: 500;
+  white-space: nowrap;
+  opacity: 1;
+}
+
+.sidebar.close .text{
+  opacity: 0;
+}
+
+.modal-body .imgholder{
+  margin-left: 5px;
+  margin-right: 10px;
+  width: 240px;
+  height: 200px;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.imgholder .upload{
+  position: absolute;
+  bottom: 0;
+  left: 10;
+  width: 100%;
+  height: 100px;
+  background: rgba(0,0,0,0.3);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.upload i{
+  color: #fff;
+  font-size: 35px;
+}
+
+.imgholder:hover .upload{
+  display: flex;
+}
+
+.imgholder .upload input{
+  display: none;
+}
+
+
+.modal-content {
+  max-width: 300px; /* Adjust the width as needed */
+  margin: auto;
+}
+
+.modal-dialog {
+  margin: 30px auto;
+}
+
+.modal-body {
+  max-height: calc(100vh - 200px); /* Adjust the max-height as needed */
+  overflow-y: auto;
   
+}
+
