--- a/public/views/chat.html
+++ b/public/views/chat.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Section</title>
-
     
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/sidebar.css">
     <link rel="stylesheet" href="/css/chat.css">
     
     <!-- loads loads common sidebar (sidebar.html) into current page -->
+    
     <script src="/js/sidebarLoader.js"></script>
 
 </head>
@@ -42,7 +44,7 @@
             <!--header -->
             <div class="header">
                 <div class="user-img">
-                    <img class="dp" src="https://www.codewithfaraz.com/InstaPic.png" alt="">
+                    <img class="dp" src="https://www.codewithfaraz.com/InstaPic.png" alt="dpImg" data-toggle="modal" data-target="#dpModal">
                 </div>
 
                 <div class="profile-data">
@@ -57,7 +59,6 @@
                 
             </div>
             
-
             <!--notification -->
             <div class="notif-box">
                 <i class="fa-solid fa-bell-slash"></i>
@@ -98,19 +99,25 @@
                           <span aria-hidden="true">&times;</span>
                       </button>
                   </div>
-                  <div class="modal-body" style="max-height: 300px; overflow-y: auto;">
+                  <div class="modal-body" style="max-height: 400px; overflow-y: auto;">
                       <form method="POST">
+                        <div class="form-group">
+                            <!-- <label for="groupName">Name</label> -->
+                            <input type="text" id="groupName" name="groupName" class="form-control" placeholder="Enter group name" required>
+                        </div>
+                        
                           <div class="form-group">
-                              <label for="groupName">Group Name</label>
-                              <input type="text" class="form-control" id="groupName" name="groupName" required>
+                              <div class="card imgholder">
+                                <label for="imgInput" class="upload">
+                                    <input type="file" name="" id="imgInput" class="form-control">
+                                    <i class="bi bi-plus-circle-dotted"></i>
+                                </label>
+                                <img src="/images/profile/profile2.webp" alt="" width="200" height="200" class="img">
+                            </div>
                           </div>
                           <div class="form-group">
-                              <label for="groupImage">Group Image</label>
-                              <input type="file" class="form-control-file" id="groupImage" name="groupImage">
-                          </div>
-                          <div class="form-group">
-                              <label>Select Users for the Group</label>
-                              <div class="user-selection">
+                              <label class="pl-3">Select Users for the Group</label>
+                              <div class="user-selection pl-4">
                                   <!-- Display list of users with checkboxes for selection -->
                                   <!-- Example: -->
                                   <!-- <input type="checkbox" id="user1" name="user1"> -->
@@ -121,31 +128,57 @@
                       </form>
                   </div>
                   <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Close&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
                       <button type="submit" form="createGroupForm" class="btn btn-primary" id="createGroup">Create Group</button>
                   </div>
               </div>
           </div>
       </div>
+
+
+      <div class="modal fade" id="dpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Change Profile Picture</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <form action="#" id="dpForm">
+                    <div class="form-group">
+                        <div class="card imgholder">
+                            <label for="imgInput" class="upload">
+                            <input type="file" name="" id="imgInput" class="form-control">
+                            <i class="bi bi-plus-circle-dotted"></i>
+                        </label>
+                        <img src="/images/profile/profile2.webp" alt="" width="200" height="200" class="img">
+                        </div>
+                     </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Close &nbsp;&nbsp;&nbsp;&nbsp;</button>
+              <button type="submit" form="dpForm" class="btn btn-primary submit">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
         
-
-
-
-
-
-
     </div>
 
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
     <script src="/js/basicconfig.js"></script>
     <script src="/js/userprofile.js"></script>
     <script src="/js/userchat.js"></script>
     <script src="/js/groupchat.js"></script>
     <script src="/js/axios.js"></script>
+   
 
 </body>
 
