--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -25,6 +25,9 @@
         <!-- Other content here -->
         
     </div>
-   
+
+    <script src="/js/axios.js"></script>
+    <script src="/js/basicconfig.js"></script>
+
 </body>
 </html>
