--- a/public/views/chat.html
+++ b/public/views/chat.html
@@ -8,13 +8,13 @@
     
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link  rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/sidebar.css">
     <link rel="stylesheet" href="/css/chat.css">
     
     <!-- loads loads common sidebar (sidebar.html) into current page -->
-    
     <script src="/js/sidebarLoader.js"></script>
 
 </head>
@@ -34,7 +34,6 @@
     </div>
 
     <!-- Chat content -->
-    <!-- Adjust the margin to accommodate the sidebar width -->
 
     <div class="background-green"></div>
 
@@ -80,7 +79,7 @@
 
             <!--chats -->
             <div class="chat-list">
-
+`               
             </div>
 
         </div>
@@ -102,7 +101,6 @@
                   <div class="modal-body" style="max-height: 400px; overflow-y: auto;">
                       <form method="POST">
                         <div class="form-group">
-                            <!-- <label for="groupName">Name</label> -->
                             <input type="text" id="groupName" name="groupName" class="form-control" placeholder="Enter group name" required>
                         </div>
                         
@@ -149,11 +147,11 @@
                 <form action="#" id="dpForm">
                     <div class="form-group">
                         <div class="card imgholder">
-                            <label for="imgInput" class="upload">
-                            <input type="file" name="" id="imgInput" class="form-control">
+                            <label for="imgInput1" class="upload">
+                            <input type="file" name="" id="imgInput1" class="form-control">
                             <i class="bi bi-plus-circle-dotted"></i>
                         </label>
-                        <img src="/images/profile/profile2.webp" alt="" width="200" height="200" class="img">
+                        <img src="/images/profile/profile2.webp" alt="" width="200" height="200" class="img1">
                         </div>
                      </div>
                 </form>
@@ -166,10 +164,20 @@
         </div>
       </div>
 
+
+
+      <div class="gif-container" id="gifContainer">
+        <div class="gif-grid" id="gifGrid">
+          <!-- Dynamically loaded GIFs will be inserted here -->
+        </div>
+      </div>
+
+      
         
     </div>
 
     
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
